# embeddb

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.en.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench-report.yml  ci.yml  docker-publish.yml  npm-publish.yml  pypi-publish.yml  release.yml
_site/criterion/insert_flat/1000/change/: estimates.json
_site/criterion/insert_flat/1000/new/: benchmark.json  estimates.json  sample.json  tukey.json
_site/criterion/insert_flat/1000/report/: index.html
_site/criterion/insert_flat/10000/base/: benchmark.json  estimates.json  tukey.json
_site/criterion/insert_flat/10000/change/: estimates.json
_site/criterion/insert_flat/10000/new/: sample.json
_site/criterion/insert_flat/10000/report/: index.html
_site/criterion/insert_flat/50000/base/: benchmark.json  estimates.json  sample.json  tukey.json
_site/criterion/insert_flat/50000/change/: estimates.json
_site/criterion/insert_flat/50000/report/: index.html
_site/criterion/insert_flat/report/: index.html
_site/criterion/insert_hnsw/1000/change/: estimates.json
_site/criterion/insert_hnsw/1000/new/: benchmark.json  estimates.json  sample.json  tukey.json
_site/criterion/insert_hnsw/1000/report/: index.html
_site/criterion/insert_hnsw/10000/base/: estimates.json  tukey.json
_site/criterion/insert_hnsw/10000/change/: estimates.json
_site/criterion/insert_hnsw/10000/new/: benchmark.json  sample.json
_site/criterion/insert_hnsw/10000/report/: index.html
_site/criterion/insert_hnsw/50000/base/: benchmark.json  estimates.json  tukey.json
_site/criterion/insert_hnsw/50000/change/: estimates.json
_site/criterion/insert_hnsw/50000/new/: sample.json
_site/criterion/insert_hnsw/50000/report/: index.html
_site/criterion/insert_hnsw/report/: index.html
_site/criterion/persist_collection/insert_100_persist/base/: sample.json
_site/criterion/persist_collection/insert_100_persist/change/: estimates.json
_site/criterion/persist_collection/insert_100_persist/new/: benchmark.json  estimates.json  tukey.json
_site/criterion/persist_collection/insert_100_persist/report/: index.html
_site/criterion/persist_collection/insert_20_persist_16d/base/: tukey.json
_site/criterion/persist_collection/insert_20_persist_16d/new/: benchmark.json  estimates.json  sample.json
_site/criterion/persist_collection/insert_20_persist_16d/report/: index.html
_site/criterion/recall_hnsw/recall@10_vs_flat/base/: benchmark.json
_site/criterion/recall_hnsw/recall@10_vs_flat/change/: estimates.json
_site/criterion/recall_hnsw/recall@10_vs_flat/new/: estimates.json  sample.json  tukey.json
_site/criterion/recall_hnsw/recall@10_vs_flat/report/: index.html
_site/criterion/report/: index.html
_site/criterion/search_flat/1000/base/: benchmark.json  estimates.json
_site/criterion/search_flat/1000/change/: estimates.json
_site/criterion/search_flat/1000/new/: sample.json  tukey.json
_site/criterion/search_flat/1000/report/: index.html
_site/criterion/search_flat/10000/base/: sample.json
_site/criterion/search_flat/10000/change/: estimates.json
_site/criterion/search_flat/10000/new/: benchmark.json  estimates.json  tukey.json
_site/criterion/search_flat/10000/report/: index.html
_site/criterion/search_flat/50000/base/: benchmark.json  estimates.json  tukey.json
_site/criterion/search_flat/50000/change/: estimates.json
_site/criterion/search_flat/50000/new/: sample.json
_site/criterion/search_flat/report/: index.html
_site/criterion/search_hnsw/report/: index.html
benches/: search_bench.rs
ci/github-actions/: release.yml  test.yml
crates/embeddb-cli/: Cargo.toml
crates/embeddb-cli/src/: main.rs
crates/embeddb-core/: Cargo.toml
crates/embeddb-core/src/: collection.rs  config.rs  db.rs  error.rs  lib.rs
crates/embeddb-embedding/: Cargo.toml
crates/embeddb-embedding/src/: lib.rs  simple.rs
crates/embeddb-ffi/: Cargo.toml
crates/embeddb-ffi/src/: lib.rs
crates/embeddb-index/: Cargo.toml
crates/embeddb-index/src/: distance.rs  lib.rs
crates/embeddb-index/src/hnsw/: builder.rs  graph.rs  node.rs  search.rs
crates/embeddb-metadata/: Cargo.toml
crates/embeddb-metadata/src/: filter.rs  store.rs
crates/embeddb-query/: Cargo.toml
crates/embeddb-query/src/: lib.rs
crates/embeddb-server/: Cargo.toml
crates/embeddb-server/src/: dashboard.html  lib.rs  routes.rs  state.rs
crates/embeddb-server/tests/: api_test.rs
crates/embeddb-storage/: Cargo.toml
crates/embeddb-storage/src/: format.rs  lib.rs  page_cache.rs  wal.rs
crates/vexra-cli/: Cargo.toml
crates/vexra-cli/src/: main.rs
crates/vexra-core/: Cargo.toml
crates/vexra-core/benches/: search_bench.rs
crates/vexra-core/src/: collection.rs  config.rs  db.rs  error.rs  lib.rs
crates/vexra-embedding/: Cargo.toml
crates/vexra-embedding/src/: lib.rs  onnx.rs  simple.rs
crates/vexra-ffi/: Cargo.toml
crates/vexra-ffi/src/: lib.rs
crates/vexra-index/: Cargo.toml
crates/vexra-index/src/: error.rs  flat.rs
crates/vexra-index/src/hnsw/: graph.rs  mod.rs  node.rs
crates/vexra-metadata/: Cargo.toml
crates/vexra-metadata/src/: error.rs  filter.rs  lib.rs
crates/vexra-query/: Cargo.toml
crates/vexra-query/src/: bm25.rs  fusion.rs  lib.rs
crates/vexra-server/: Cargo.toml
crates/vexra-server/src/: dashboard.html  dashboard.rs  lib.rs  routes.rs  state.rs
crates/vexra-server/tests/: api_test.rs
crates/vexra-storage/: Cargo.toml
crates/vexra-storage/src/: encoding.rs  error.rs  format.rs  wal.rs
sdk/go/: go.mod  vexra.go
sdk/java/: pom.xml
sdk/javascript/: Cargo.toml  index.d.ts  index.js  package.json
sdk/javascript/src/: lib.rs
sdk/python/: Cargo.toml  README.md  pyproject.toml
sdk/python/embeddb/: __init__.py  client.py  config.py
sdk/python/src/: lib.rs
sdk/python/tests/: test_sdk.py
sdk/python/vexra/: __init__.py
tests/integration/: lifecycle.rs
(+20 files in other folders)
