[package]
name = "embeddb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EmbedDB core: public API, Database and Collection handles"

[dependencies]
embeddb-storage = { path = "../embeddb-storage" }
embeddb-index = { path = "../embeddb-index" }
embeddb-metadata = { path = "../embeddb-metadata" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile = "3"
rand = "0.8"
