[package]
name = "embeddb-embedding"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EmbedDB text embedding engine (hash-based + optional ONNX)"

[features]
default = []
# Enable ONNX Runtime integration (requires libonnxruntime installed)
onnx = []  # "ort", "tokenizers", "hf-hub"

[dependencies]
embeddb-core = { path = "../embeddb-core" }
serde.workspace = true
thiserror.workspace = true

# Future: ort = { version = "2", optional = true }
# Future: tokenizers = { version = "0.21", optional = true }
# Future: hf-hub = { version = "0.4", optional = true }
