[package]
name = "embeddb-query"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EmbedDB query engine: BM25 sparse retrieval + hybrid fusion"

[dependencies]
embeddb-core = { path = "../embeddb-core" }
embeddb-index = { path = "../embeddb-index" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tantivy = "0.22"
