[package]
name = "embeddb-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EmbedDB web dashboard HTTP server (Phase 2)"

[dependencies]
embeddb-core = { path = "../embeddb-core" }
serde.workspace = true
thiserror.workspace = true
# Will be activated in Phase 2:
# axum.workspace = true
# tokio.workspace = true
# tower-http.workspace = true
# rust-embed.workspace = true
