[package]
name = "vexra-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EmbedDB command-line interface"

[[bin]]
name = "vexra"
path = "src/main.rs"

[dependencies]
vexra-core = { path = "../vexra-core" }
vexra-server = { path = "../vexra-server" }
vexra-embedding = { path = "../vexra-embedding" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
