[package]
name = "vexra-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vexra core: public API, Database and Collection handles"

[dependencies]
vexra-storage = { path = "../vexra-storage" }
vexra-index = { path = "../vexra-index" }
vexra-metadata = { path = "../vexra-metadata" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile = "3"
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[test]]
name = "integration"
path = "../../tests/integration/lifecycle.rs"

[[bench]]
name = "search_bench"
harness = false
