[package]
name = "vexra-embedding"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vexra text embedding engine (hash-based + optional ONNX)"

[features]
default = []
# Enable ONNX Runtime for production-quality embeddings.
# Requires: libonnxruntime installed on the system.
# Install: https://github.com/microsoft/onnxruntime/releases
onnx = ["dep:ort", "dep:tokenizers", "dep:hf-hub"]

[dependencies]
vexra-core = { path = "../vexra-core" }
serde.workspace = true
thiserror.workspace = true

# ONNX Runtime (optional)
ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = ["std", "ndarray"] }
# HuggingFace tokenizers (optional)
tokenizers = { version = "0.21", optional = true, default-features = false }
# HuggingFace Hub model download (optional)
hf-hub = { version = "0.4", optional = true }
