[package]
name = "vexra-index"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EmbedDB vector indexes: Flat (brute-force), HNSW, IVF"

[dependencies]
vexra-storage = { path = "../vexra-storage" }
serde.workspace = true
thiserror.workspace = true
log.workspace = true
parking_lot.workspace = true
bytemuck.workspace = true
fastrand = "2"

[dev-dependencies]
tempfile = "3"
rand = "0.8"
