[package]
name = "vexra-metadata"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EmbedDB metadata storage and filtering"

[dependencies]
vexra-storage = { path = "../vexra-storage" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true

[dev-dependencies]
tempfile = "3"
