[package]
name = "vexra-query"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EmbedDB query engine: BM25 sparse retrieval + hybrid fusion"

[dependencies]
vexra-core = { path = "../vexra-core" }
vexra-index = { path = "../vexra-index" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tantivy = "0.22"
