[package]
name = "vexra-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "EmbedDB storage engine: page format, WAL, page cache"

[dependencies]
serde.workspace = true
serde_json.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
log.workspace = true
parking_lot.workspace = true
memmap2.workspace = true
crc32fast.workspace = true
fastrand = "2"

[dev-dependencies]
tempfile = "3"
