[package]
name = "embeddb-js"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "EmbedDB JavaScript/Node.js SDK — native napi-rs bindings"

[lib]
crate-type = ["cdylib"]

[dependencies]
embeddb-core = { path = "../../crates/embeddb-core" }
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"
serde_json = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = 3
lto = true
