[package]
name = "vexra-py"
version = "1.4.0"
edition = "2021"
license = "MIT"
description = "Vexra Python SDK — embedded vector database"

# Independent workspace (not part of the root workspace)
[workspace]

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
vexra-core = { path = "../../crates/vexra-core" }
pyo3 = { version = "0.22", features = ["extension-module"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
